@@ -6,6 +6,16 @@ Zope Changes
 
   Zope 2.10.10 (Unreleased)
 
+    Features added
+
+      - Testing/custom_zodb.py: added support use a different storage other
+        than DemoStorage. A dedicated FileStorage can be mount by setting the
+        $TEST_FILESTORAGE environment variable to a custom Data.fs file.  A 
+        ZEO server can be configured using the $TEST_ZEO_HOST and 
+        $TEST_ZEO_PORT environment variables. This new functionality allows us
+        to use the standard Zope testrunner for writing and running tests
+        against existing Zope installations.
+
     Bugs fixed
 
       - LP #360761 (backported from Acquisition trunk): fix iteration proxy
